js/src/tests/test262/built-ins/Error/isError/errors.js
assert
.
sameValue
(
Error
.
isError
(
new
Error
(
)
)
true
)
;
assert
.
sameValue
(
Error
.
isError
(
new
EvalError
(
)
)
true
)
;
assert
.
sameValue
(
Error
.
isError
(
new
RangeError
(
)
)
true
)
;
assert
.
sameValue
(
Error
.
isError
(
new
ReferenceError
(
)
)
true
)
;
assert
.
sameValue
(
Error
.
isError
(
new
SyntaxError
(
)
)
true
)
;
assert
.
sameValue
(
Error
.
isError
(
new
TypeError
(
)
)
true
)
;
assert
.
sameValue
(
Error
.
isError
(
new
URIError
(
)
)
true
)
;
if
(
typeof
AggregateError
!
=
=
'
undefined
'
)
{
assert
.
sameValue
(
Error
.
isError
(
new
AggregateError
(
[
]
)
)
true
)
;
}
if
(
typeof
SuppressedError
!
=
=
'
undefined
'
)
{
assert
.
sameValue
(
Error
.
isError
(
new
SuppressedError
(
)
)
true
)
;
}
reportCompare
(
0
0
)
;
